--- a/table/table-style.css
+++ b/table/table-style.css
@@ -6,15 +6,15 @@ body{
 caption{
     font-size: 50px;
 }
-table td th thead {
-    border: solid 5px black;
-    background-color: #5842f1;
+table,th,td {
+    border: solid 3px black;
+    border-collapse: collapse;
 }
 th, td{
     padding: 10px;
 }
 ol{
-    border: solid 3px black;
+    border: solid 5px black;
     border-radius: 20;
 }
 ul{
