--- a/form/register-style.css
+++ b/form/register-style.css
@@ -1,1 +1,24 @@
 @charset "utf-8";
+.red{
+    background-color: red;
+    font-size: 0.8rem;
+}
+th{
+    background-color: #857f60;
+    color: aliceblue;
+    vertical-align: top;
+}
+th, td{
+    padding: 10px;
+    text-align: left;
+}
+td{
+    background-color: #dcdad1;
+}
+table{
+    font-size: 15px;
+    padding-bottom: 20px;
+}
+.smoll{
+    font-size: 8px;
+}
